--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 html {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 .d-flex {
     display: flex;
@@ -18,6 +18,10 @@ html {
 }
 .align-center {
     align-items: center;
+}
+.container {
+    margin: 0 auto;
+    width: 1000px;
 }
 header {
     color: #787878;
@@ -71,4 +75,29 @@ header li {
 header li:last-of-type {
     color: #0078FF;
     border-bottom: 2px solid #0078FF;
+}
+main {
+    padding-top: 3rem;
+}
+h2, p {
+    margin: 1.3rem 0;
+    line-height: 1.8rem;
+}
+h2 {
+    margin-top: 1.7rem;
+}
+p {
+    font-size: 0.9rem;
+}
+ol li {
+    margin-left: 20px;
+    margin-bottom: 40px;
+}
+ol li span{
+    margin-left: 20px;
+    display: flex;
+}
+ol ol li{
+    margin-left: 40px;
+    list-style-type: lower-alpha;
 }
